feat: cadastrar, listar e verificar o codigo existente do produto finalizados (esqueci dos commits separados :/ )
